# ProofPGS

./: .gitignore  CLAUDE.md  LIBPGS_MIGRATION_PLAN.md  PGS_FORMAT.md  README.md  pyproject.toml
.github/workflows/: release.yml
proofpgs/: __init__.py  __main__.py  cli.py  color.py  constants.py  detect.py  ffmpeg.py  interactive.py  libpgs.py  mkv.py  parser.py  pipeline.py  renderer.py  shellmenu.py  style.py
